--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Daemon to accept and display event notifications",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node index.js exampleConfig.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -16,5 +16,9 @@
   "dependencies": {
     "express": "^4.9.7",
     "socket.io": "^1.2.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.8.10",
+    "gulp-file": "^0.1.0"
   }
 }
