--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js exampleConfig.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "gulp test"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "gulp": "^3.8.10",
-    "gulp-file": "^0.1.0"
+    "gulp-file": "^0.1.0",
+    "gulp-mocha": "^2.0.1"
   }
 }
