--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "socket.io": "^1.2.0"
   },
   "devDependencies": {
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
     "gulp": "^3.8.10",
     "gulp-file": "^0.1.0",
-    "gulp-mocha": "^2.0.1"
+    "gulp-mocha": "^2.0.1",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
+    "webpack": "^1.13.2"
   }
 }
