--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "enzyme": "^2.4.1",
     "gulp": "^3.8.10",
     "gulp-file": "^0.1.0",
-    "gulp-mocha": "^2.0.1",
+    "gulp-jsx-coverage": "^0.3.8",
+    "mocha": "^3.0.2",
     "react": "^15.3.1",
     "react-addons-test-utils": "^15.3.1",
     "react-dom": "^15.3.1",
